# overwatch

./: .env.example  .gitignore  DSL_DOCUMENTATION.md  Makefile  README.md  docker-compose.yml  go.work
Book/: ArchinDetaile.md  Bookofgod.md
contracts/: finding.schema.json
data/: user_agents.txt
services/findings-ranker/: Cargo.toml
services/findings-ranker/src/: finding_deduplicator.rs  finding_models.rs  main.rs  severity_scorer.rs
services/poc-sandbox/: Cargo.toml
services/poc-sandbox/mockserver/: go.mod  main.go
services/poc-sandbox/src/: main.rs
services/poc-sandbox/templates/: checksums.sha256  cmdi_echo.py  open_redirect.py  path_traversal.py  sqli_error_based.py  ssrf_listener.py  xss_reflected.py
services/scanner-engine/: go.mod  go.sum  insecure_transport.go  insecure_transport_test.go
services/scanner-engine/cmd/overwatch/: main.go  scan_jobs_cli.go  triage_preview.go  triage_preview_test.go  triage_test.go
services/scanner-engine/internal/analyzers/: access_control_heuristics.go  analyzer.go  c_buffer_overflow.go  c_cmdi.go  c_format_string.go  c_use_after_free.go  command_execution.go  cross_site_scripting.go  dependency_audit.go  go_open_redirect.go  go_ssrf.go  go_tls_config.go  go_xxe.go  java_deserialize.go  java_secrets.go  java_sqli.go  java_weak_crypto.go  java_xxe.go  js_cmdi.go  js_eval.go  js_prototype_pollution.go  js_secrets.go  js_sqli.go  js_xss.go  php_cmdi.go  php_file_inclusion.go  php_sqli.go  php_xss.go  registry.go  (+15 more)
services/scanner-engine/sh/: test_rules.py
sh/: bootstrap.sh  generate_manifest.py  test_contracts.py
(+70 files in other folders)
