[package]
name = "poc-sandbox"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
hex = "0.4"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }
reqwest = { version = "0.11", features = ["json"] }
redis = { version = "0.23", features = ["tokio-comp"] }
nix = { version = "0.26", features = ["sched", "user", "fs"] }
libc = "0.2"
wasmtime = "14.0"
caps = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
